PackageManager: allow build-time disabling of components
Author: Pawit Pornkitprasan <p.pawit@gmail.com>
Date:   Sun Sep 1 16:24:14 2013 +0700

    PackageManager: allow build-time disabling of components

    Allow components to be specified as disabled at build time
    (applied on boot).

    This allows stock OTA components to be marked as disabled in
    CM builds.

    Change-Id: I6e4499cc40a779792a5ea97a10137399dad7d69f

Author: Gianmarco Reverberi <gianmarco.reverberi@gmail.com>
Date:   Mon Mar 16 20:02:15 2015 +0100

    SystemUpdateService: enable service but lock its receivers [1/2]

    Added a check for ensure that disabled components are not
    re-enabled at runtime

    Added code for forcing enable of previously disabled components

    Change-Id: Icfcfa26ccb85028d32edbb5cdb3dd7cdae85b720

Author: Michael W <baddaemon87@gmail.com>
Date:   Mon Oct 28 14:26:43 2019 +0100

    PM: Allow disabling components per-device

    * Introduce a new overlayable string-array
      "config_deviceDisabledComponents"
    * This is equally used to disable components per-device, e.g.
      NearbyMessagingService
    * At the same time, rename config_disabledComponents to
      config_globallyDisabledComponents to reflect the difference

    Change-Id: Ieeec0788b063a33e8a2830dd95b239c99a58466f

Author: Michael W <baddaemon87@gmail.com>
Date:   Fri Nov 1 11:11:29 2019 +0100

    PackageManager: Refactor en-/disabling of components

    * Don't use the same code twice, make it reusable

    Change-Id: I9fc388f56cea413654a390cb0ccd15a706fb3ad8

Change-Id: Ic26c9d2f080ab61e09b2d64ae48cd6f29147774a
Co-authored-by: Gianmarco Reverberi <gianmarco.reverberi@gmail.com>
Co-authored-by: Michael W <baddaemon87@gmail.com>

--- a/core/res/res/values/superior_symbols.xml
+++ b/core/res/res/values/superior_symbols.xml
@@ -62,4 +62,8 @@
     <java-symbol type="string" name="battery_saver_on_notification_title" />
     <java-symbol type="string" name="battery_saver_on_notification_summary" />
 
+    <!-- Package Manager -->
+    <java-symbol type="array" name="config_deviceDisabledComponents" />
+    <java-symbol type="array" name="config_globallyDisabledComponents" />
+    <java-symbol type="array" name="config_forceEnabledComponents" />
 </resources>
