--- a/packages/SystemUI/res/values/superior_strings.xml
+++ b/packages/SystemUI/res/values/superior_strings.xml
@@ -79,4 +79,9 @@
     <string name="screenrecord_skip_time_summary">Remove 3 second wait</string>
     <string name="screenrecord_hevc_switch_label">Enable HEVC</string>
     <string name="screenrecord_hevc_switch_summary">Use more efficient HEVC video encoding</string>
+
+    <!-- Force stop -->
+    <string name="task_helper_app_killed">%1$s force stopped</string>
+    <string name="empty_app_killed">App</string>
+
 </resources>
