base: this fixes the long unsloved error of allignment
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/packages/SystemUI/res/values-ru/superior_strings.xml
+++ b/packages/SystemUI/res/values-ru/superior_strings.xml
@@ -86,7 +86,7 @@
     <string name="omnijaws_service_last_update">Последнее обновление:</string>
     <!-- Advanced powermenu -->
     <string name="global_action_restart_system">Перезагрузка</string>
-    <string name="global_action_restart_advanced">Расширенная перезагрузка</string>
+    <string name="global_action_restart_advanced">Расширенная\nперезагрузка</string>
     <string name="global_action_restart_recovery">Рекавери</string>
     <string name="global_action_restart_bootloader">Загрузчик</string>
     <string name="global_action_restart_ui">Интерфейс системы</string>
