--- a/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
+++ b/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
@@ -25,8 +25,7 @@
     android:gravity="center"
     android:orientation="horizontal"
     android:clickable="true"
-    android:paddingTop="@dimen/status_bar_padding_top"
-    android:background="@android:color/transparent" >
+    android:paddingTop="@dimen/status_bar_padding_top" >
 
     <LinearLayout
         android:layout_width="0dp"
@@ -48,20 +47,12 @@
         systemui:showDark="false" />
     </LinearLayout>
 
-
     <android.widget.Space
         android:id="@+id/space"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical|center_horizontal"
         android:visibility="gone" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1.5"
-        android:orientation="horizontal"
-        android:gravity="center_vertical|end" >
 
     <LinearLayout
         android:layout_width="0dp"
@@ -111,5 +102,4 @@
                 android:visibility="gone" />
         </LinearLayout>
 
-    </LinearLayout>
 </LinearLayout>
