Bring back UDFPS icons and animations [1/3]
neobuddy89: Adapted for Android 12L

commit 663b6a32680ef059a099f70366ba4ad09e6a62ac
Author: SagarMakhar <sagarmakhar@gmail.com>
Date:   Fri Jul 23 14:03:51 2021 +0000

    SystemUI: Add Superior fod icon [1/2]

    Change-Id: I17639d02f5acc84417091743019c76c8ce018c9b
    Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>

commit da16161c9c2490b765939adb7cccfbe73c2cd932
Author: Pranav Vashi <neobuddy89@gmail.com>
Date:   Mon Jun 28 16:56:30 2021 +0900

    FODCircleView/FODAnimation: Clean ups and improvements

    * Unify various settings under TunerService API.
    * Observe both FOD_ANIM and FOD_RECOGNIZING_ANIMATION in FODCircleView only.
    * Remove redundant UpdateStyle() calls.
    * Allow mFODAnimation calls if FOD animation enabled.
    * Fix onScreenTurnedOn() -> Call showCircle only mPressPending/FOD Gesture enabled.

    Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
    Change-Id: Ic3367d0f2be7a0229a6466fc3dcf18e4879d5c19
    Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>

commit 47d60d786fb2b6b42f81ff1f1441f4af1f520419
Author: jhonboy121 <alfredmathew05@gmail.com>
Date:   Mon Apr 5 19:40:17 2021 +0000

    FODCircleView: refactor where show and hide animation calls are done

    relocated them to showCircle and hideCircle methods, fixes persistent animation after unlocking with long press of finger

    Change-Id: I8ed2ae0e040113c8b6d9c8e23982da316198f5dc
    Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>

commit e4d78719c8536c4e55c3fb10ca3b968aff6bb51b
Author: jhonboy121 <alfredmathew05@gmail.com>
Date:   Mon Apr 5 13:59:12 2021 +0000

    SystemUI: instantiate FODAnimation early

    * avoids many NPE's
    * pass WindowManager instance to the constructor of FODAnimation class
    * also added a null check before starting animation
    * cleaned up code a little bit

    Change-Id: I940616e946c4f5ae8fe23bf169c776915b1b66e3
    Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>

commit c195285d8

--- a/packages/SystemUI/res/values/superior_dimens.xml
+++ b/packages/SystemUI/res/values/superior_dimens.xml
@@ -50,4 +50,8 @@
     <!-- BurnIn Protection -->
     <dimen name="burnin_protection_horizontal_shift">1dp</dimen>
     <dimen name="burnin_protection_vertical_shift">1dp</dimen>
+
+    <!-- Udfps fingerprint animation -->
+    <dimen name="udfps_animation_size">280dp</dimen>
+    <dimen name="udfps_animation_offset">0dp</dimen>
 </resources>
